--- a/src/main/resources/listeArticleAdmin.fxml
+++ b/src/main/resources/listeArticleAdmin.fxml
@@ -5,11 +5,14 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
 
+<?import java.net.URL?>
 <VBox xmlns="http://javafx.com/javafx/8.0.171"
       xmlns:fx="http://javafx.com/fxml"
       fx:controller="controllers.ListeArticleAdminController"
       spacing="20" style="-fx-background-color: #f0fdf4;" alignment="TOP_LEFT" prefWidth="1000">
-
+    <stylesheets>
+        <URL value="@ListeArticleAdmin.css" />
+    </stylesheets>
     <padding>
         <Insets top="20" left="30" right="30" bottom="20"/>
     </padding>
@@ -20,7 +23,7 @@
         <TextField fx:id="nomArticleField" promptText="Nom de l'article" />
         <TextField fx:id="proprietaireField" promptText="Nom du propriétaire" />
         <ComboBox fx:id="categorieFilterCombo" promptText="Toutes les catégories" />
-        <Button fx:id="rechercherBtn" text="Rechercher" style="-fx-background-color: #28a745; -fx-text-fill: white;" />
+        <Button fx:id="rechercherBtn" text="Rechercher" styleClass="btn-primary" />
     </HBox>
 
     <TableView fx:id="articleTable" prefHeight="500" style="-fx-background-color: white;">
@@ -35,6 +38,9 @@
             <TableColumn fx:id="actionsColumn" text="" prefWidth="100"/>
         </columns>
     </TableView>
-    <Pagination fx:id="pagination" pageCount="1" maxPageIndicatorCount="10" />
-
+    <HBox spacing="10" alignment="CENTER">
+        <Button fx:id="btnPrevious" text="« Précédent" styleClass="btn-pagination" onAction="#handlePrevious" />
+        <HBox fx:id="pagination" spacing="5" alignment="CENTER" />
+        <Button fx:id="btnNext" text="Suivant »" styleClass="btn-pagination" onAction="#handleNext" />
+    </HBox>
 </VBox>
