--- a/src/main/resources/workshop/AfficherCategorieCours.fxml
+++ b/src/main/resources/workshop/AfficherCategorieCours.fxml
@@ -27,12 +27,12 @@
 
     <!-- TABLEAU -->
     <TableView fx:id="categorieTableView"
-               prefWidth="700" prefHeight="400">
+               VBox.vgrow="ALWAYS">
         <columns>
-            <TableColumn fx:id="colId" text="#" prefWidth="50"/>
-            <TableColumn fx:id="colNom" text="Nom de la Catégorie" prefWidth="200"/>
-            <TableColumn fx:id="colDescription" text="Description" prefWidth="300"/>
-            <TableColumn fx:id="colDetails" text="Details" prefWidth="200"/>
+            <TableColumn fx:id="colId" text="#"/>
+            <TableColumn fx:id="colNom" text="Nom de la Catégorie"/>
+            <TableColumn fx:id="colDescription" text="Description"/>
+            <TableColumn fx:id="colDetails" text="Détails"/>
         </columns>
     </TableView>
 
