--- a/src/main/resources/baseUser.css
+++ b/src/main/resources/baseUser.css
@@ -123,3 +123,85 @@
 .profile-menu:showing .dropdown-icon {
     -fx-rotate: 180;
 }
+
+.nav-button {
+    -fx-background-color: transparent;
+    -fx-text-fill: #1e293b;
+    -fx-font-size: 16px;
+    -fx-font-weight: bold;
+    -jfx-button-type: RAISED;
+    -fx-cursor: hand;
+    -fx-background-radius: 8;
+    -fx-padding: 6 18;
+    -fx-transition: all 0.3s ease-in-out;
+}
+
+.nav-button:hover {
+    -fx-background-color: #cbd5e150;
+}
+
+.nav-link {
+    -fx-font-size: 16px;
+    -fx-text-fill: #333;
+    -fx-cursor: hand;
+    -fx-padding: 10;
+    -fx-transition: all 0.3s ease-in-out;
+    -fx-scale-x: 1;
+    -fx-scale-y: 1;
+}
+
+.nav-link:hover {
+    -fx-text-fill: #1abc9c;
+    -fx-scale-x: 1.1;
+    -fx-scale-y: 1.1;
+}
+.icon {
+    -fx-font-size: 18px;
+    -fx-text-fill: #333;
+    -fx-cursor: hand;
+    -fx-padding: 8;
+    -fx-transition: all 0.3s ease-in-out;
+    -fx-scale-x: 1;
+    -fx-scale-y: 1;
+}
+
+.icon:hover {
+    -fx-text-fill: #1abc9c;
+    -fx-scale-x: 1.3;
+    -fx-scale-y: 1.3;
+}
+.user-menu {
+    -fx-background-color: transparent;
+    -fx-padding: 5 10 5 10;
+    -fx-border-radius: 20;
+    -fx-background-radius: 20;
+    -fx-cursor: hand;
+}
+
+.user-menu:hover {
+    -fx-background-color: #f0f0f0;
+}
+.profile-name {
+    -fx-font-weight: bold;
+    -fx-text-fill: #333;
+    -fx-font-size: 13px;
+}
+.cart-icon {
+    -fx-font-size: 20px;
+    -fx-text-fill: black; /* change la couleur selon ton thème */
+    -fx-effect: dropshadow(one-pass-box, rgba(0, 0, 0, 0.2), 2, 0, 0, 1);
+    -fx-cursor: hand;
+    -fx-padding: 0 5 0 5;
+    -fx-transition: all 0.3s ease-in-out;
+}
+
+.cart-icon:hover {
+    -fx-effect: dropshadow(one-pass-box, rgba(0, 0, 0, 0.4), 4, 0, 0, 2);
+    -fx-scale-x: 1.1;
+    -fx-scale-y: 1.1;
+}
+
+
+
+
+
